fixing layout and spacing

--- a/web/style_screen.css
+++ b/web/style_screen.css
@@ -57,7 +57,6 @@ body {
 /* Style the tab content */
 .tabcontent {
   display: none;
-  padding: 6px 12px;
   border: 1px solid #ccc;
   border-top: none;
 }
@@ -76,47 +75,30 @@ body {
 
 .listquery input { width: 110px; }
 
-.sidebar {
-  height: 100%;
-  width: 180px; 
-  position: fixed;
-  z-index: 1; 
-  top: 150px;
-  left: 0;
-  background-color: #c2cad6;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
-
 #results_objquery {
-  margin-top: 110px;
-  margin-left: 10px;
-  margin-right: 10px;
+  position:fixed;
+  top: 110px;
+  left: 250px;
+  right: 0;
+  bottom:0;
+  overflow-y:scroll;
+  overflow-x:scroll;
+  padding: 10px;
 }
 
 #sidebar_objquery {
   height: 100%;
   position: fixed;
-  top: 0;
+  top: 110px;
   left: 0;
   background-color: #c2cad6;
   overflow-x: hidden;
-  padding-top: 10px;
   display: table;
+  padding: 10px;
 }
 
 .query {
-  padding: 10;
-}
-
-/*.results {
-    margin-left: 180px; 
-    margin-top: 60px; 
-}*/
-
-.results {
-    padding-top: 10px;
-    padding-left: 10px;
+  padding: 10px;
 }
 
 .results table {
@@ -155,7 +137,7 @@ body {
   background-color: white;
   border: 1px solid gray;
   border-radius: 5px;
-  padding: 8;
+  padding: 8px;
   vertical-align: top;
 }
 
@@ -189,4 +171,8 @@ ul {
 
 .objname {
     font-weight: bold;
+}
+
+.summary {
+  margin-block-start: 0em;
 }
